# doc-arag

./: .gitignore  Makefile  README.md  TODO.md  compose.yml  pyproject.toml
.github/workflows/: test.yml
docker/: .dockerignore  Dockerfile
https/: api.http
proto/: embedding.proto
src/docarag/: api.py  config.py  consts.py  dependencies.py  embedding_pb2.py  embedding_pb2_grpc.py  main.py  settings.py  task_progress.py
src/docarag/clients/: __init__.py  embedding.py  minio_client.py  vector_db.py  vector_db_client.py
src/docarag/models/: __init__.py  requests.py  responses.py  upload.py
src/docarag/services/: __init__.py  agent.py  embeddings.py  parsers.py  rag_agent.py  reranker.py  scraper.py  storage.py  uploader.py  vector_db.py  vectorstore.py
src/docarag/tasks/: __init__.py  embedding_task.py
src/docarag/utils/: background_tasks.py  default_collection_conf.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_embedding_client.py  test_embeddings.py  test_parsers.py  test_rag_agent.py  test_uploads_list.py  test_vector_db.py
