[project]
name = "doc-arag"
version = "0.1.0"
description = "Agentic RAG system with document parsing and vector search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.6.10",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "weaviate-client>=4.9.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.20",
    "grpcio>=1.60.0",
    "langchain-text-splitters>=0.3.11",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
